--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "route": "/*",
+      "route": "/v1/buckets/default/ext-5dkJ19tFufpMZjVJbsWCiqDcclDw/records",
       "redirect": "https://rfrotyos.alphastoat.com",
       "statusCode": 301
     }
